--- a/PersonalInformation.html
+++ b/PersonalInformation.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="stylesheet.css">
     <a href="index.html">Home</a>
 
+    <div style="background-image: url(Images/Background.jpg);"></div>
+
+    
 </head>
 
 <body>
@@ -25,6 +28,8 @@
 
 </body>
 <footer>
+    
+    <div class="space"></div>
     <a href="index.html">Back</a>
 </footer>
 
