--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
 
     <link rel="stylesheet" href="stylesheet.css">
     <a href="index.html">Home</a>
+
+   
 </head>
 
 <body>
+
+    
+
     <br>
 <h1>James Buckman</h1>
-<br>
+<h2>Student Number: s3494024</h2>
+
+    <center><img src="Images/Me.jpg" 
+        alt="picture of me" height="300" width="300">
+    </center>
+
+<div class="space"></div>
 <center><a href="PersonalInformation.html">Personal Information</a></center>
 </body>
 
